1) ParcelableQuery 2) AbstractQuery.appendQuery(AbstractQuery q) 3) GUI segetsegevel (TrFormActivity) lehet pusholni egy tranzakciot